Edited about.blade, updated master.blade so home link directs to welcome.blade if user not logged in or weather.index if user is logged in

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 fix subscription controller@update
 admin ability to block a user
+all references to prices stating they include gst
 
 if time: differentiate between open and basic plans
 if time: improve css for user profile pages
