--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
+REQUIREMENTS
 fix subscription controller@update
-admin ability to block a user
-all references to prices stating they include gst
 
-if time: differentiate between open and basic plans
-if time: improve css for user profile pages
-if time: improve css for admin console
+IMPROVEMENTS
+differentiate between open and basic plans
+improve css for user profile pages
+improve css for admin console
